cephfs-mirror: shutdown ClusterWatcher on termination

Fixes: https://tracker.ceph.com/issues/52062
Signed-off-by: Venky Shankar <vshankar@redhat.com>
(cherry picked from commit 9b8d82009278cc275a71102914bcb34850ce03b8)